Tested THe backend , Fixed Deepgram version issues
SST fixed onto the AI procssing of text recieved

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ fastapi
 uvicorn
 pydantic
 pydantic-settings
-google-generativeai
-deepgram-sdk>=3.0.0
+google-genai
+deepgram-sdk==3.3.2
 motor
 python-multipart
 websockets
